# numbers_go_brrrr

./: .gitignore  404.html  README.md  about.md  faq.md  index.html  mkdocs.yml  the_end.md
.github/: linkcheck_config.json
TODO/: index.html
about/: index.html
acknowledgements/: index.html
code/: index.html
faq/: index.html
m0_introduction/: README.md  index.html  s0_intro_to_computing.md  s1_intro_to_rust.md  s2_basic_concepts_in_rust.md  s3_less_basic_concepts_in_rust.md  s4_exercises.md
m1_memory_hierarchies/: README.md  index.html  s0_soft_memory_hierarchies.md  s1_basic_data_structures.md  s2_less_basic_data_structures.md  s3_computational_graphs.md  s4_intro_to_gpus.md  s5_immediate_gpu_computation.md  s6_building_a_computational_graph.md  s7_computational_graph_compilers.md  s8_exercises.md
m2_concepts_in_parallelism/: index.html
m2_concurrency/: README.md  index.html  s0_data_parallelism.md  s1_threads.md  s2_locks.md  s3_atomics.md  s4_message_passing.md  s5_async.md  s6_more_gpu.md  s7_parallel_graphs.md  s8_exercises.md
m2_parallelism/: index.html
m3_types/: README.md  index.html  s0_integers.md  s1_floats.md  s2_energy_efficiency.md  s3_bitwise_operations.md  s4_bit_tricks.md  s5_compression.md  s6_cooperative_matrices.md  (+1 more)
m4_real_time_systems/code/egui-winit-wgpu-template/: Cargo.toml  README.md  index.html
m4_real_time_systems/code/egui-winit-wgpu-template/src/: application_arguments.rs  command.rs  config.rs  engine_status.rs  gui.rs  lib.rs  main.rs  render_context.rs  render_engine.rs  shader.wgsl  uniforms.rs  vertex.rs
(+211 files in other folders)
