[package]
name = "egui_winit_wgpu_template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "egui_winit_wgpu_template"
path = "src/main.rs"

[lib]
name = "egui_winit_wgpu_template"
path = "src/lib.rs"

[profile.dev]
incremental = true

[profile.release]
incremental = true

[dependencies]
winit = { version = "0.29.7", features = ["rwh_05"] }
egui-wgpu = "0.25.0"
pollster = "0.3.0"
wgpu = "0.18.0"
env_logger = "0.10.1"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0.77"
cfg-if = "1.0.0"
log = "0.4.20"
egui-winit = "0.25.0"
egui = "0.25.0"
crossbeam-channel = "0.5.8"
rfd = "0.14.0"
serde = {version = "1.0.197", features = ["derive"]}
toml = "0.8.10"
clap = {version = "4.5.2", features = ["cargo", "env", "string"]}